# deppy

./: .env.example  Cargo.toml  Makefile  Readme.md
src/: cli.rs  config.rs  constants.rs  main.rs
src/api/: config_extraction_service.rs  errors.rs  github_service.rs  jira_service.rs  result_printer_service.rs  ticket_extraction_service.rs  version_service.rs
src/domain/doctor/: doctor_app.rs
src/domain/to_deploy/services/: bar_info_gathering_service.rs  foo_info_gathering_service.rs  info_gathering_service.rs
