[package]
name = "deppy-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.11.2"
octocrab = "0.34.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.30"
regex = "1.10.3"
async-stream = "0.3.5"
async-trait = "0.1.79"
anyhow = "1.0.81"
mockito = "1.4.0"
